--- a/assets/css/main-style.css
+++ b/assets/css/main-style.css
@@ -248,7 +248,7 @@ header a:focus {
 .accomodation_picture,
 .popular_picture,
 .activity_picture {
-    box-shadow: 0px 0px 10px 1px rgb(0 0 0 / 10%);
+    box-shadow: 0px 0px 10px 1px #D9D9D9;
 }
 
 
@@ -313,7 +313,7 @@ header nav ul li:focus {
 /* HEADER */
 
 header {
-    margin: 0px 3.8% 0px 3.8%;
+    margin: 0px 3.3% 0px 3.3%;
 }
 
 header #logo {
@@ -352,7 +352,7 @@ header nav ul li {
 /* SEARCH SECTION */
 
 .search {
-    margin: 0% 3.5% 0% 3.5%;
+    margin: 0% 3% 0% 3%;
 }
 
 
@@ -448,8 +448,8 @@ header nav ul li {
 /* ACCOMODATIONS SECTION */
 
 .accomodations_in_city {
-    margin-left: 3.5%;
-    margin-right: 3.5%;
+    margin-left: 3%;
+    margin-right: 3%;
     min-height: 626px;
 }
 
@@ -526,6 +526,7 @@ header nav ul li {
 
 .popular_name {
     margin-top: 12px;
+    flex-flow: row wrap;
 }
 
 .popular_price {
@@ -547,13 +548,13 @@ header nav ul li {
 /* ACTIVITIES SECTION  */
 
 .activities_section {
-    margin: 60px 0px 60px 0px;
+    margin: 60px 3% 60px 3%;
 }
 
 .activities_section h2 {
     margin-bottom: 25px;
     align-self: flex-start;
-    margin-left: 3.5%;
+    margin-left: 3%;
 }
 
 .image-width {
@@ -605,7 +606,7 @@ header nav ul li {
 }
 
 .activities_in_city article {
-    margin: 0px 1.1rem 0px 1.1rem;
+    margin: 0px 1.2rem 0px 1.2rem;
 }
 
 
@@ -616,7 +617,7 @@ footer nav a {
 }
 
 footer nav {
-    margin-left: 3.5%;
+    margin-left: 3%;
 }
 
 footer nav h3 {
